# 50_statistical_techniques

./: README.md
my_statistic_project/: Cargo.toml
my_statistic_project/src/: main-1.rs.old  main-2.rs.old  main.rs
