[package]
name = "my_statistic_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv                   = "1.3.0"
reqwest           = {version="0.11", features = ["blocking"]}
serde               = {version="1.0", features = ["derive"]}